--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -125,10 +125,12 @@
 \newcommand{\CC}{\mathbb{C}} % complex
 \newcommand{\HH}{\mathbb{H}} % quaternions
 \newcommand{\PP}{\mathbb{P}} % projective
+\newcommand{\torus}{\mathbf{T}} % torus
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclareMathOperator{\End}{End}
 \DeclareMathOperator{\Tr}{Tr}
 \DeclareMathOperator{\plexp}{plexp}
+\DeclareMathOperator{\rank}{rank}
 
 \ExplSyntaxOn
 \newcommand{\Lie}[1]{
@@ -375,25 +377,24 @@ and $\lie{D}^p(2,1,\alpha=1)=\lie{osp}(4-p,p|2)$.
 
 % todo: Ph. Spindel, A. Sevrin, W. Troost, A. Van Proeyen (1988), D. Joyce (1992) construct (all) left-invariant hypercomplex structures on (simply-connected?) compact (reductive?) Lie groups: any simple Lie groups become ``left-invariantly hypercomplex'' once multiplied by an appropriate torus.
 
+\paragraph[Identity component]{The identity component~$G_0$} is the connected component of~$G$ containing the identity.
+
+Any compact connected Lie group~$G$ is a quotient of $\torus^q\times\prod_i G_i$ by a finite subgroup of its center, with Lie groups~$G_i$ that are simple, compact, simply-connected and connected.
+
+\paragraph{Homotopy.} Every (connected?) Lie group~$G$ deformation-retracts onto its maximal compact subgroup (hence is homotopic to it), has $\pi_1(G)$ abelian and finitely-generated, $\pi_2(G)=0$, and $\pi_3(G)\sim\ZZ^{\text{finite}}$ (Iwasawa).  Simple Lie groups~$G$ have $\pi_3(G)=\ZZ$.
+
 % todo: more on homotopy groups of Lie (super)groups
 
-Every (connected) Lie group deformation-retracts onto its maximal compact subgroup.
+Then $\pi_n(G)=\prod_i \pi_n(G_i)$ for $n\geq 2$.
 
-For any connected Lie group~$G$, $\pi_1(G)$ is finitely-generated abelian, $\pi_2(G)=0$, $\pi_3(G)\sim\ZZ^{\text{finite}}$ (Iwasawa).
-
-Simple Lie groups~$G$ have $\pi_3(G)=\ZZ$.
-
-Any connected compact Lie group~$G$ is a quotient of $\RR^q\times\prod_i G_i$ by a finite central subgroup, where the compact simple Lie groups~$G_i$ can be taken to be simply-connected (and connected).  Then $\pi_n(G)=\prod_i \pi_n(G_i)$ for $n\geq 2$.
-
-For a rank~$r$ Lie group~$G$, there exists $\prod_{i=1}^r S^{2k_i+1}\to G$ which induces an isomorphism of rational homotopy (or of cohomology) groups:
-\begin{gather*}
-  S^3\times S^5\times\cdots\times S^{2n-1} \simeq_{\QQ} SU(n) \\
-  S^3\times S^7\times\cdots\times S^{4n-1} \simeq_{\QQ} USp(2n) \simeq_{\QQ} SO(2n+1) \\
-  S^{2n+1} \times SO(2n+1) \simeq_{\QQ} SO(2n+2)
-\end{gather*}
-% todo: understand rational homotopy groups, can I really factor what's given in http://www.math.binghamton.edu/somnath/Notes/GSS5.pdf ?
-
-However, this is not true of integer homotopy groups.  For instance, $\pi_4(SU(2))=\mathbb{Z}_2$.
+Any Lie group~$G$ is rational homotopic to a product of odd-dimensional spheres: there exists $\prod_{i=1}^{\rank G} S^{2k_i+1}\to G$ which induces isomorphisms of rational (\ie, modulo torsion) homotopy/cohomology groups:
+\begin{align*}
+  S^3\times S^5\times\cdots\times S^{2n-1} & \simeq_{\QQ} SU(n) \\
+  S^3\times S^7\times\cdots\times S^{4n-1} & \simeq_{\QQ} USp(2n) \simeq_{\QQ} SO(2n+1) \\
+  S^{2n+1} \times SO(2n+1) & \simeq_{\QQ} SO(2n+2)
+\end{align*}
+% see http://www.math.binghamton.edu/somnath/Notes/GSS5.pdf ?
+This fails for integer homotopy groups: $\pi_4(SU(2))=\mathbb{Z}_2$ \etc.
 
 \subsection{Representations of Lie (super)algebras/groups}
 
@@ -861,6 +862,10 @@ K\"ahler form whose metric is Ricci flat.
 
 (from Wikipedia on Calabi conjecture: ``The Calabi conjecture states that a compact Kähler manifold has a unique Kähler metric in the same class whose Ricci form is any given 2-form representing the first Chern class.'')
 
+% \subsection{Misc properties of manifolds}
+
+% todo \paragraph{Rokhlin's theorem}
+
 \section{Dualities}
 
 \subsection{String theory dualities}
@@ -891,7 +896,7 @@ confining $\sigma R$.
 
 \paragraph{Quotient.}  If $\pi_0(X)=\pi_1(X)=0$ and $G\actson X$ then $\pi_1(X/G)=\pi_0(G)$ ($=G$ for $G$~discrete).
 
-\paragraph{Long exact sequence for a fiber bundle} $F\hookrightarrow E\twoheadrightarrow B$: $\cdots\to\pi_i(F)\to\pi_i(E)\to\pi_i(B)\to\pi_{i-1}(F)\to\cdots$
+\paragraph{Long exact sequence for a fiber bundle} $F\hookrightarrow E\twoheadrightarrow B$: for base-points $b_0\in B$ and $e_0=f_0\in F=p^{-1}(b_0)\subset E$, $\cdots\to\pi_{i+1}(B)\to\pi_i(F)\to\pi_i(E)\to\pi_i(B)\to\cdots\to\pi_0(E)$ is exact, namely each image equals the next kernel (inverse image of the constant map).
 
 \paragraph{Homotopy groups of spheres} are finite except $\pi_n(S^n)=\ZZ$ and $\pi_{4n-1}(S^{2n})=\ZZ\times\text{finite}$.  For $k<n$, $\pi_k(S^n)=0$, and $\pi_{n+k}(S^n)$ is independent of~$n$ for $n\geq k+2$.  All $\pi_k(S^0)=0$, $\pi_k(S^1)=0$ for $k\neq 1$, and $\pi_k(S^3)=\pi_k(S^2)$ for $k\neq 2$.
 \begin{tab}{*9{>{$}c<{$}}}
